[package]
name = "zeroflight"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
dcmimu = "0.2.2"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
modular-bitfield = "0.11.2"
panic-halt = "1.0.0"
rtic = { version = "2.1.2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.0.3", features = ["cortex-m-systick"] }
rtic-sync = "1.3.0"
stm32f4xx-hal = { path = "../stm32f4xx-hal", features = ["otg-fs", "stm32f405", "usb_fs"] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"
