[package]
name = "zeroflight"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zeroflight"
required-features = []

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
crc = "3.2.1"
dcmimu = "0.2.2"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.2.0", features = ["defmt", "chrono", "exti", "memory-x", "stm32f405rg", "time-driver-tim5", "unstable-pac"] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
embedded-hal = "1.0.0"
#embedded-hal-nb = "1.0.0"
#futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
#heapless = "0.8.0"
modular-bitfield = "0.11.2"
#panic-halt = "1.0.0"
panic-probe = "0.3.2"
static_cell = "2.1.0"
#stm32f4xx-hal = { path = "../stm32f4xx-hal", features = ["otg-fs", "stm32f405", "usb_fs"] }
#usb-device = "0.3.2"
#usbd-serial = "0.2.2"

[features]
speedybee = []
default = ["speedybee"]
